--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
 html {
     box-sizing: border-box;
 }
@@ -62,43 +64,42 @@ body {
     font-weight: 700;
 }
 
-.menu__btn{
+.menu__btn {
     display: none;
 }
 
-.menu-mobile__list{
+.menu-mobile__list {
     width: 243px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
     transform: translateX(-100%);
-    transition: all .3s;
+    transition: all 0.3s;
     position: absolute;
     z-index: 1000;
     background: #fff;
 }
 
-
-.menu-mobile__list--active{
+.menu-mobile__list--active {
     transform: translateX(0);
 }
 
-.menu-mobile__item{
+.menu-mobile__item {
     position: relative;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.menu-mobile__link{
+.menu-mobile__link {
     display: block;
     padding-left: 53px;
     padding-top: 36px;
 }
 
-.menu-mobile__img{
+.menu-mobile__img {
     position: absolute;
     bottom: 0;
     left: 11px;
 }
 
-.menu__mobile-linewrapper{
+.menu__mobile-linewrapper {
     display: none;
 }
 
@@ -109,7 +110,6 @@ body {
 .menu__item + .menu__item {
     padding-left: 50px;
 }
-
 
 .header__box {
     display: flex;
@@ -130,7 +130,6 @@ body {
     left: -2px;
     top: -6px;
 }
-
 
 .user__list {
     padding-right: 15px;
@@ -1618,15 +1617,15 @@ button.catalog__filter-btnline {
     outline: none;
 }
 
-.aside__btn{
+.aside__btn {
     display: none;
 }
 
-.product-card__btn.product-card__btn-mobile{
+.product-card__btn.product-card__btn-mobile {
     display: none;
 }
 
-.product-slider .slick-dots{
+.product-slider .slick-dots {
     bottom: -30px;
 }
 
@@ -1634,20 +1633,19 @@ button.catalog__filter-btnline {
     background-color: #c4c4c4;
 }
 
-.product-slider .slick-dots .slick-active button{
+.product-slider .slick-dots .slick-active button {
     background-color: #1c62cd;
 }
 
-.footer__topdrop{
+.footer__topdrop {
     pointer-events: none;
 }
 
-
-.payment{
+.payment {
     margin-bottom: 100px;
 }
 
-.payment__maintitle{
+.payment__maintitle {
     font-weight: 600;
     font-size: 21px;
     padding-bottom: 20px;
@@ -1656,42 +1654,41 @@ button.catalog__filter-btnline {
     text-transform: uppercase;
 }
 
-.payment li{
+.payment li {
     list-style: disc;
 }
 
-.payment__shipping-inner li{
+.payment__shipping-inner li {
     list-style: circle;
 }
 
-.payment ul{
+.payment ul {
     padding-left: 35px;
 }
 
-.payment__title{
+.payment__title {
     margin-bottom: 15px;
     font-size: 19px;
 }
 
-.payment__shipping{
+.payment__shipping {
     margin-bottom: 20px;
 }
 
-.payment__shipping-item{
+.payment__shipping-item {
     margin-bottom: 10px;
     font-size: 17px;
 }
 
-.payment__shipping-text{
+.payment__shipping-text {
     font-size: 17px;
 }
-
 
 .contact {
     margin-bottom: 100px;
 }
 
-.contact__maintitle{
+.contact__maintitle {
     font-weight: 600;
     font-size: 21px;
     padding-bottom: 20px;
@@ -1700,30 +1697,274 @@ button.catalog__filter-btnline {
     text-transform: uppercase;
 }
 
-.contact__box{
+.contact__box {
     display: flex;
     margin-bottom: 35px;
 }
 
-.contact__img{
+.contact__img {
     width: 20px;
     height: auto;
     margin: 3px 15px 0 5px;
 }
 
-.contact__title{
+.contact__title {
     text-transform: uppercase;
     font-size: 18px;
     margin-bottom: 5px;
     font-weight: 600;
 }
 
-.contact__text{
+.contact__text {
     display: block;
     font-size: 17px;
     padding-left: 3px;
 }
 
-.contact__text.mail{
+.contact__text.mail {
     text-decoration: underline;
 }
+
+/* Forms */
+
+.forms {
+    margin: 0;
+    padding: 0;
+}
+
+.forms,
+.forms input {
+    font-family: "Poppins", sans-serif;
+}
+
+.container-forms {
+    position: relative;
+    width: 100%;
+    background-color: #fff;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.forms-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.signin-signup {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 75%;
+    width: 50%;
+    transition: 1s 0.7s ease-in-out;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 5;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0rem 5rem;
+    transition: all 0.2s 0.7s;
+    overflow: hidden;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+form.sign-up-form {
+    opacity: 0;
+    z-index: 1;
+}
+
+form.sign-in-form {
+    z-index: 2;
+}
+
+.container-forms .title {
+    font-size: 1.9rem;
+    color: #444;
+    margin-bottom: 25px;
+}
+
+.input-field {
+    max-width: 380px;
+    width: 100%;
+    background-color: #f0f0f0;
+    margin: 10px 0;
+    height: 55px;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 0.4rem;
+    position: relative;
+}
+
+.input-field i {
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    transition: 0.5s;
+    font-size: 1.1rem;
+}
+
+.input-field input {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.1rem;
+    color: #333;
+}
+
+.input-field input::placeholder {
+    color: #aaa;
+    font-weight: 500;
+}
+
+.btn {
+    width: 300px;
+    background-color: #5995fd;
+    border: none;
+    outline: none;
+    height: 49px;
+    border-radius: 49px;
+    color: #fff;
+    font-weight: 600;
+    margin: 20px 0;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.btn:hover {
+    background-color: #4d84e2;
+}
+.panels-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.container-forms:before {
+    content: "";
+    position: absolute;
+    height: 1800px;
+    width: 1800px;
+    top: -10%;
+    right: 48%;
+    transform: translateY(-50%);
+    background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
+    transition: 1.8s ease-in-out;
+    border-radius: 50%;
+    z-index: 6;
+}
+
+.image {
+    width: 100%;
+    transition: transform 1.1s ease-in-out;
+    transition-delay: 0.4s;
+}
+
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    text-align: center;
+    z-index: 6;
+}
+
+.left-panel {
+    pointer-events: all;
+    padding: 3rem 17% 2rem 12%;
+}
+
+.right-panel {
+    pointer-events: none;
+    padding: 3rem 12% 2rem 17%;
+}
+
+.panel .content {
+    color: #fff;
+    transition: transform 0.9s ease-in-out;
+    transition-delay: 0.6s;
+}
+
+.panel h3 {
+    font-weight: 600;
+    line-height: 1;
+    font-size: 1.5rem;
+}
+
+.panel p {
+    font-size: 0.95rem;
+    padding: 0.7rem 0;
+}
+
+.btn.transparent {
+    margin: 0;
+    background: none;
+    border: 2px solid #fff;
+    width: 200px;
+    height: 41px;
+    font-weight: 600;
+    font-size: 0.8rem;
+}
+
+.right-panel .image,
+.right-panel .content {
+    transform: translateX(800px);
+}
+
+/* animation */
+
+.container-forms.sign-up-mode:before {
+    transform: translate(100%, -50%);
+    right: 52%;
+}
+
+.container-forms.sign-up-mode .left-panel .image,
+.container-forms.sign-up-mode .left-panel .content {
+    transform: translateX(-800px);
+}
+
+.container-forms.sign-up-mode .signin-signup {
+    left: 25%;
+}
+
+.container-forms.sign-up-mode form.sign-up-form {
+    opacity: 1;
+    z-index: 2;
+}
+
+.container-forms.sign-up-mode form.sign-in-form {
+    opacity: 0;
+    z-index: 1;
+}
+
+.container-forms.sign-up-mode .right-panel .image,
+.container-forms.sign-up-mode .right-panel .content {
+    transform: translateX(0%);
+}
+
+.container-forms.sign-up-mode .left-panel {
+    pointer-events: none;
+}
+
+.container-forms.sign-up-mode .right-panel {
+    pointer-events: all;
+}
+
+
+
+
