--- a/css/style.css
+++ b/css/style.css
@@ -1729,7 +1729,7 @@ button.catalog__filter-btnline {
 
 .forms {
     margin: 0;
-    padding: 0;
+    padding: 15px;
 }
 
 .forms,
@@ -1765,7 +1765,7 @@ button.catalog__filter-btnline {
     z-index: 5;
 }
 
-form {
+.forms form {
     display: flex;
     align-items: center;
     justify-content: center;
