--- a/css/media.css
+++ b/css/media.css
@@ -54,6 +54,9 @@
     .contact__map iframe{
         width: 952px;
     }
+    .form__error{
+        font-size: 0.68rem;
+    }
 }
 
 @media (max-width: 968px) {
@@ -176,6 +179,12 @@
     .contact__map iframe{
         width: 768px;
     }
+    .btn {
+        width: 70%;
+    }
+    .form__error{
+        font-size: .58rem;
+    }
 }
 
 @media (max-width: 940px) {
@@ -212,6 +221,12 @@
     }
     .card__label-search::after {
         display: none;
+    }
+}
+
+@media (max-width: 840px){
+    .form__error{
+        font-size: .55rem;
     }
 }
 
@@ -322,6 +337,9 @@
     .container-forms.sign-up-mode .signin-signup {
         top: 5%;
         transform: translate(-50%, 0);
+    }
+    .form__error{
+        font-size: .6rem;
     }
 }
 
@@ -545,6 +563,10 @@
         bottom: 28%;
         left: 50%;
     }
+
+    .btn {
+        font-size: 0.8rem;
+    }
 }
 
 @media (max-width: 440px) {
@@ -559,5 +581,11 @@
     }
     .contact__map iframe{
         width: 320px;
+    }
+    .btn {
+        font-size: 0.7rem;
+    }
+    .form__error{
+        font-size: .5rem;
     }
 }
